editor-components/intro-section/intro-section6/intro-section6.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss"
  as *;

.container {
   position: relative;
  overflow: hidden;

  .max-content {
    .intro-wrapper {
      display: flex;
      width: 100%;
      height: 100%;
      justify-content: end;
     min-height: 500px;
     align-items: center;

      &.alignment-center {
        .text-content {
          .vertical-content {
            .title,
            .subtitle,
            .description,
            .bottomText {
              text-align: left;
            }
            .actions-wrapper {
              align-items: flex-start;
            }
            .button-wrapper {
              justify-content: flex-start;
              width: 100%;
            }
            .text-wrapper {
              justify-content: flex-start;
              width: 100%;
            }
            .thumb-row {
              justify-content: flex-start;
            }
          }
        }
      }

      &.alignment-left {
        .text-content {
          .vertical-content {
            .title,
            .subtitle,
            .description,
            .text-wrapper {
              text-align: left;
            }
            .button-wrapper {
              justify-content: flex-start;
            }
          }
        }
      }

      .image-container {
        position: absolute;
        left: 0;
        top: 0;
        width: calc(50% - var(--composer-gap-md));
        height: 100%;

        &.image-container-alone {
          width: 100%;
          height: 100%;
        }

        .media-wrapper {
          
          height: 100%;
          
          

          .thumbnail-overlay {
            position: absolute;
            left: 0;
            top: 0;
            width: 100%;
            height: 100%;
            background-color: var(--composer-overlay-color);
            transition: opacity var(--composer-transition-duration-normal) ease;
            pointer-events: none;
            z-index: 1;
          }
        }

        .media-image {
          width: 100%;
          height: 100%;
          object-fit: cover;
        }
      }

      .text-content {
        width: 50%;
        display: flex;
        flex-direction: column;
        justify-content: center;
        height: 100%;

        &.text-content-alone {
          width: 100%;
        }

        .vertical-content {
          .subtitle,
          .title,
          .description,
          .text-wrapper {
            content: "";
          }

          .subtitle {
            margin-left: 0;
          }

          .actions-wrapper {
            width: 100%;
            display: flex;
            flex-direction: column;
            gap: var(--composer-gap-md);
          }

          .button-wrapper {
            display: flex;
            gap: var(--composer-gap-md);
          }

          .thumb-row {
            display: flex;
            gap: var(--composer-gap-sm);

            .thumb-icon {
              display: flex;
              align-items: center;
              color: var(--composer-tertiary-color);
            }

            .bottomText {
              color: var(--composer-font-color-primary);
            }
          }

          .button-icon {
            content: "";
            display: flex;
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    padding: 0 !important;
    .max-content {
      .intro-wrapper {
        flex-direction: column;

        .image-container {
          order: 2;
          flex: 0 0 100%;
          width: 100%;
          position: relative;
          padding: 0;
        }

        .text-content {
            padding: 80px 40px !important;
          order: 1;
          width: 100%;
          flex: 0 0 100%;
        }
      }
    }
  }
}

